# bemf_observer

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: cmake-single-platform.yml  cmake.yml
include/: controllers.hpp
include/controllers/: pi_controller.hpp  pid_controller.hpp
include/math/: cordic.hpp  foc.hpp  functions.hpp  operators.hpp
include/observers/: bemf_observer.hpp  dq_update.hpp  tracker.hpp
src/: controllers.cpp
src/controllers/: pi_controller.cpp  pid_controller.cpp
src/math/: cordic.cpp  foc.cpp  function.cpp  functions.cpp  operators.cpp
src/observers/: bemf_observer.cpp  dq_update.cpp  tracker.cpp
test/: pi_test.cpp
tests/: bemf_observer_test.cpp  cordic_algo_test.cpp  dq_update_test.cpp  pi_test.cpp  pid_test.cpp  tracker_test.cpp
